Ensure dropdowns are hidden at page load (prevents content 'jumping')

--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -56,6 +56,14 @@ hr {
 }
 
 /**
+ * Ensure dropdowns are hidden at page load (prevents content 'jumping').
+ */
+
+.txp-dropdown {
+    display: none;
+}
+
+/**
  * Search widget at top of lists.
  *
  * Appears on: listing pages.
